2001-07-05  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (INCLUDES):
	(rollback_capplet_LDADD): Update to include ximian_archiver stuff
	correctly

2001-01-29  Bradford Hovinen  <hovinen@ximian.com>

	* rollback-widget.c (rollback_widget_realize): Check entire
	success array and warn if any allocation did not succeed

	* config-manager-dialog.c (cancel_cb): Don't do rollback

	* Makefile.am (rollback_capplet_SOURCES): Added rollback-control.[ch]

	* config-manager-dialog.c (config_manager_dialog_init): Construct
	a rollback widget with a rollback control and place it in the
	dialog

2001-01-27  Bradford Hovinen  <hovinen@ximian.com>

	* rollback-widget.c (rollback_widget_realize): Allocate control
	colors

	* rollback-widget.h (struct _RollbackWidget ): Added array
	control_colors

	* rollback-widget.c (rollback_widget_realize):
	(rollback_widget_unrealize): Implement. Just calls the parent's
	[un]realize and creates/destroys a GC to be used by the individual
	controls.
	(rollback_widget_get_gc): Implement. Return the GC created above

2001-01-25  Bradford Hovinen  <hovinen@ximian.com>

	* main.c (main): Support operating on global backends
	Add popt option for operating on global backends

2001-01-24  Bradford Hovinen  <hovinen@ximian.com>

	* config-manager-dialog.c (config_manager_dialog_finalize): Update
	unrefs
	(config_manager_dialog_init): GLADE_DIR -> GLADE_DATADIR
	(config_manager_dialog_init): Remove outdated signal connections
	(config_manager_dialog_init): Remove code to create location list
	Inherit from CappletWidget rather than GnomeDialog
	(config_manager_dialog_init): Remove gtk_window_set_policy call
	(ok_cb):
	(cancel_cb): Remove gnome_dialog_close call
	(config_manager_dialog_init): Set state to "changed" so that the
	Ok button is active
	(populate_backends_cb): Set backend_id in dialog if not already set

	* Makefile.am (INCLUDES): Changed CAPPLET_CFLAGS to
	ROLLBACK_CAPPLET_CFLAGS
	(rollback_capplet_LDADD): Ditto for CAPPLET_LIBS
