@@ -1,28 +1,28 @@
 confexecdir = $(libdir)
-confexec_DATA = ximian_archiverConf.sh
+confexec_DATA = config_archiverConf.sh
 
-Locationmetadir = $(datadir)/ximian-setup-tools/archiver
+Locationmetadir = $(datadir)/control-center-data/archiver
 Locationmeta_DATA = default-user.xml default-global.xml
 
-includedir = $(prefix)/include/ximian-archiver
+includedir = $(prefix)/include/config-archiver
 
 INCLUDES = 			\
 	-DGNOMELOCALEDIR=\""$(datadir)/locale"\" 				\
 	-I$(includedir)								\
 	$(GNOME_INCLUDEDIR)							\
 	-DVERSION=\""$(VERSION)"\"						\
-	-DG_LOG_DOMAIN=\"libximian-archiver\"					\
+	-DG_LOG_DOMAIN=\"libconfig-archiver\"					\
 	-DCONFIGDIR=\""/etc"\"							\
-	-DLOCATION_DIR=\""$(datadir)/ximian-setup-tools/archiver"\"		\
+	-DLOCATION_DIR=\""$(datadir)/control-center-data/archiver"\"		\
 	-DGLADE_DIR=\""$(INTERFACES_DIR)"\"					\
 	-DXST_BACKEND_LOCATION=\""$(datadir)/ximian-setup-tools/scripts"\"	\
 	@ARCHIVER_CFLAGS@							\
 	@MONIKER_CFLAGS@
 
-bin_PROGRAMS = bonobo-moniker-archiver ximian-archiver
-lib_LTLIBRARIES = libximian_archiver.la
+bin_PROGRAMS = bonobo-moniker-archiver config-archiver
+lib_LTLIBRARIES = libconfig_archiver.la
 
-libximian_archiver_la_SOURCES = \
+libconfig_archiver_la_SOURCES = \
 	archive.c		archive.h		\
 	location.c		location.h		\
 	config-log.c		config-log.h		\
@@ -31,7 +31,7 @@ libximian_archiver_la_SOURCES = \
 	cluster-location.c	cluster-location.h	\
 	util.c			util.h
 
-libximian_archiver_la_LIBADD = \
+libconfig_archiver_la_LIBADD = \
 	@GNOME_XML_LIBS@
 
 include_HEADERS = \
@@ -43,26 +43,26 @@ include_HEADERS = \
 	cluster-location.h	\
 	util.h
 
-ximian_archiver_SOURCES = \
+config_archiver_SOURCES = \
 	main.c
 
-ximian_archiver_LDADD = \
+config_archiver_LDADD = \
 	$(GNOME_LIBDIR)						\
 	$(GNOMEUI_LIBS)						\
 	$(INTLLIBS)						\
 	@ARCHIVER_LIBS@						\
-	libximian_archiver.la
+	libconfig_archiver.la
 
 #
-# Create the ximian_archiverConf.sh file from the sh.in file
+# Create the config_archiverConf.sh file from the sh.in file
 #
-ximian_archiverConf.sh: ximian_archiverConf.sh.in Makefile
+config_archiverConf.sh: config_archiverConf.sh.in Makefile
 	sed -e 's?\@VERSION\@?$(VERSION)?' \
-	    -e 's?\@XIMIAN_ARCHIVER_LIBDIR\@?$(XIMIAN_ARCHIVER_LIBDIR)?g' \
-	    -e 's?\@XIMIAN_ARCHIVER_LIBS\@?$(XIMIAN_ARCHIVER_LIBS)?g' \
-	    -e 's?\@XIMIAN_ARCHIVER_INCLUDEDIR\@?$(XIMIAN_ARCHIVER_INCLUDEDIR)?g' \
-	    < $(srcdir)/ximian_archiverConf.sh.in > ximian_archiverConf.tmp \
-	  && mv ximian_archiverConf.tmp ximian_archiverConf.sh
+	    -e 's?\@CONFIG_ARCHIVER_LIBDIR\@?$(CONFIG_ARCHIVER_LIBDIR)?g' \
+	    -e 's?\@CONFIG_ARCHIVER_LIBS\@?$(CONFIG_ARCHIVER_LIBS)?g' \
+	    -e 's?\@CONFIG_ARCHIVER_INCLUDEDIR\@?$(CONFIG_ARCHIVER_INCLUDEDIR)?g' \
+	    < $(srcdir)/config_archiverConf.sh.in > config_archiverConf.tmp \
+	  && mv config_archiverConf.tmp config_archiverConf.sh
 
 OAF_FILES = 						\
 	Bonobo_Moniker_archiver.oaf			
@@ -84,9 +84,9 @@ bonobo_moniker_archiver_SOURCES =		\
 	bonobo-config-archiver.h		\
 	bonobo-moniker-archiver.c
 
-bonobo_moniker_archiver_LDADD = @MONIKER_LIBS@ libximian_archiver.la
+bonobo_moniker_archiver_LDADD = @MONIKER_LIBS@ libconfig_archiver.la
 
 EXTRA_DIST = \
 	$(Locationmeta_DATA)			\
-	ximian_archiverConf.sh.in		\
+	config_archiverConf.sh.in		\
 	Bonobo_Moniker_archiver.oaf.in
