@@ -1,0 +1,4 @@
+CONFIG_ARCHIVER_LIBDIR="@CONFIG_ARCHIVER_LIBDIR@"
+CONFIG_ARCHIVER_LIBS="@CONFIG_ARCHIVER_LIBS@"
+CONFIG_ARCHIVER_INCLUDEDIR="@CONFIG_ARCHIVER_INCLUDEDIR@"
+MODULE_VERSION="config-archiver-@VERSION@"
