@@ -1,4 +1,0 @@
-XIMIAN_ARCHIVER_LIBDIR="@XIMIAN_ARCHIVER_LIBDIR@"
-XIMIAN_ARCHIVER_LIBS="@XIMIAN_ARCHIVER_LIBS@"
-XIMIAN_ARCHIVER_INCLUDEDIR="@XIMIAN_ARCHIVER_INCLUDEDIR@"
-MODULE_VERSION="ximian-archiver-@VERSION@"
