@@ -1,5 +1,7 @@
 2001-07-05  Bradford Hovinen  <hovinen@ximian.com>
 
+	* config-manager-dialog.c: Update #include locations
+
 	* Makefile.am (INCLUDES):
 	(rollback_capplet_LDADD): Update to include ximian_archiver stuff
 	correctly
